updated code with UI changes in help and culture